[gd_scene load_steps=18 format=3 uid="uid://cgksfc3odlqxl"]

[ext_resource type="Texture2D" uid="uid://biar3j3bf1jix" path="res://asset/UI/main menu/main bg 2.png" id="1_bm8t2"]
[ext_resource type="Script" uid="uid://d3bjk64bt6a4k" path="res://scripts/UI/main_menu.gd" id="1_n3ahy"]
[ext_resource type="Texture2D" uid="uid://be3mycma3x04k" path="res://asset/UI/main menu/logo.png" id="1_ngj32"]
[ext_resource type="Shader" uid="uid://do0kguycoq3ub" path="res://asset/Shader/UI/BgMM.gdshader" id="2_d0t0a"]
[ext_resource type="Texture2D" uid="uid://diwo1xb6bwxhc" path="res://asset/UI/main menu/Property 1=Default-1.png" id="2_ngj32"]
[ext_resource type="Texture2D" uid="uid://sfceo856tpns" path="res://asset/UI/main menu/Property 1=Group 13.png" id="3_bm8t2"]
[ext_resource type="Texture2D" uid="uid://bormfd26y2nig" path="res://asset/UI/main menu/Property 1=Default.png" id="3_normal"]
[ext_resource type="Texture2D" uid="uid://4o5bh017l4ey" path="res://asset/UI/main menu/Property 1=Default-2.png" id="4_5d4ag"]
[ext_resource type="Texture2D" uid="uid://dbxb37k3pjqwb" path="res://asset/UI/main menu/startH.png" id="4_sfthw"]
[ext_resource type="Shader" uid="uid://pbkrv8edw83r" path="res://asset/Shader/UI/titleMM.gdshader" id="4_sh0sw"]
[ext_resource type="Texture2D" uid="uid://bsbl3643h0vbb" path="res://asset/UI/main menu/Property 1=Default-3.png" id="5_um6dh"]
[ext_resource type="Texture2D" uid="uid://dn32wdukrcb7g" path="res://asset/UI/main menu/heroH.png" id="7_n3ahy"]
[ext_resource type="Texture2D" uid="uid://dkrihxgv6vrgd" path="res://asset/UI/main menu/tutorH.png" id="10_scr1a"]
[ext_resource type="Texture2D" uid="uid://jt7d7sahy44l" path="res://asset/UI/main menu/creditH.png" id="12_d0t0a"]
[ext_resource type="Texture2D" uid="uid://bwpbaq3jimr44" path="res://asset/UI/main menu/quitH.png" id="14_sh0sw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wfqjx"]
shader = ExtResource("2_d0t0a")
shader_parameter/vignette_strength = 0.6410000304475
shader_parameter/vignette_size = 0.5090000241775
shader_parameter/brightness = 0.0
shader_parameter/contrast = 1.1
shader_parameter/saturation = 1.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mtd5q"]
shader = ExtResource("4_sh0sw")
shader_parameter/pulse_speed = 2.0
shader_parameter/pulse_intensity = 0.5
shader_parameter/glow_color = Color(1, 0.8, 0.3, 1)
shader_parameter/glow_size = 0.02

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n3ahy")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="TextureRect" parent="CanvasLayer/MarginContainer"]
material = SubResource("ShaderMaterial_wfqjx")
layout_mode = 2
texture = ExtResource("1_bm8t2")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="Title" type="TextureRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_mtd5q")
offset_left = 1.0
offset_top = 2.0
offset_right = 566.0
offset_bottom = 302.0
texture = ExtResource("1_ngj32")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="ButtonContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 40.0
offset_top = 291.0
offset_right = 390.0
offset_bottom = 682.0
size_flags_vertical = 4
alignment = 1

[node name="StartBtn" type="TextureButton" parent="CanvasLayer/ButtonContainer"]
custom_minimum_size = Vector2(350, 75)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_normal")
texture_pressed = ExtResource("4_sfthw")
texture_hover = ExtResource("4_sfthw")
texture_focused = ExtResource("4_sfthw")
ignore_texture_size = true
stretch_mode = 5

[node name="HeroBtn" type="TextureButton" parent="CanvasLayer/ButtonContainer"]
custom_minimum_size = Vector2(350, 75)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_ngj32")
texture_pressed = ExtResource("7_n3ahy")
texture_hover = ExtResource("7_n3ahy")
texture_focused = ExtResource("7_n3ahy")
ignore_texture_size = true
stretch_mode = 5

[node name="TutorialBtn" type="TextureButton" parent="CanvasLayer/ButtonContainer"]
custom_minimum_size = Vector2(350, 75)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_bm8t2")
texture_pressed = ExtResource("10_scr1a")
texture_hover = ExtResource("10_scr1a")
texture_focused = ExtResource("10_scr1a")
ignore_texture_size = true
stretch_mode = 5

[node name="CreditBtn" type="TextureButton" parent="CanvasLayer/ButtonContainer"]
custom_minimum_size = Vector2(350, 75)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_5d4ag")
texture_pressed = ExtResource("12_d0t0a")
texture_hover = ExtResource("12_d0t0a")
texture_focused = ExtResource("12_d0t0a")
ignore_texture_size = true
stretch_mode = 5

[node name="QuitBtn" type="TextureButton" parent="CanvasLayer/ButtonContainer"]
custom_minimum_size = Vector2(350, 75)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_um6dh")
texture_pressed = ExtResource("14_sh0sw")
texture_hover = ExtResource("14_sh0sw")
texture_focused = ExtResource("14_sh0sw")
ignore_texture_size = true
stretch_mode = 5

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Credit" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.25
offset_top = -80.75
offset_right = 218.25
offset_bottom = 80.75
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "IKI CREDIT COK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/Panel/Credit"]
layout_mode = 0
offset_right = 54.0
offset_bottom = 26.0
text = "back"

[connection signal="pressed" from="CanvasLayer/ButtonContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/HeroBtn" to="." method="_on_hero_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/TutorialBtn" to="." method="_on_tutorial_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/CreditBtn" to="." method="_on_credit_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/Credit/Button" to="." method="_on_button_pressed"]
